# resume

./: README.md  experience.dhall  flake.nix  result  resume.cabal  style.css
src/: Main.hs  TH.hs  experience.dhall  style.css
