cabal-version:   3.0
name:            resume
version:         0.1.0
maintainer:      djanatyn@gmail.com
author:          Jonathan Strickland
homepage:        https://github.com/djanatyn/resume
build-type:      Simple

executable resume
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.15.1.0,
        blaze-html ^>=0.9.1,
        blaze-markup ^>=0.8.2,
        bytestring ^>=0.10.12,
        text ^>=1.2.5,
        dhall ^>=1.41.2,
        typed-process ^>=0.2.10,
        template-haskell ^>= 2.17.0
